@@ -1,4 +1,8 @@
+Tue Jan 25 12:01:33 2000  David A Helder  <dhelder@umich.edu>
 
+	* README: Clean-ups
+	* src/inetaddr.c: Changed snprintf to g_snprintf.
+	
 Sun Jan 23 14:05:42 2000  David A Helder  <dhelder@umich.edu>
 
 	* auto*: Upped version to 0.1.6
